Added file groups to translation status

--- a/scripts/scripts.ini
+++ b/scripts/scripts.ini
@@ -7,6 +7,7 @@ scripts\main.txt
 #日付固定イベント
 scripts\day\dayevent.txt
 
+#SCRIPT GROUP Mikan status
 #ステータス系
 scripts\status\mikan_kenkou.txt
 scripts\status\mikan_badend.txt
@@ -14,6 +15,7 @@ scripts\status\mikan_qa.txt
 scripts\status\mikan_episode.txt
 scripts\status\mikan_tachi.txt
 
+#SCRIPT GROUP Ichigo status
 scripts\status\ichigo_atama.txt
 scripts\status\ichigo_kenkou.txt
 scripts\status\ichigo_badend.txt
@@ -21,6 +23,7 @@ scripts\status\ichigo_qa.txt
 scripts\status\ichigo_episode.txt
 scripts\status\ichigo_tachi.txt
 
+#SCRIPT GROUP Karin status
 scripts\status\karin_atama.txt
 scripts\status\karin_kenkou.txt
 scripts\status\karin_badend.txt
@@ -29,12 +32,14 @@ scripts\status\karin_episode.txt
 scripts\status\karin_tachi.txt
 
 
+#SCRIPT GROUP prologue
 # プロローグ
 scripts\prologue\youzyo.txt
 scripts\prologue\youzyo2.txt
 scripts\prologue\youzyo3.txt
 scripts\prologue\youzyoG.txt
 
+#SCRIPT GROUP shop
 #ショップ系
 scripts\item\shop.txt
 scripts\item\shop_buy.txt
@@ -46,6 +51,7 @@ scripts\item\shop_in.txt
 scripts\item\shop_h.txt
 scripts\item\item.txt
 
+#SCRIPT GROUP Karin day
 #かりん
 scripts\day\karin\kari1.txt
 scripts\day\karin\kari2.txt
@@ -68,6 +74,7 @@ scripts\day\karin\kari_date-1.txt
 scripts\day\karin\kari_date-2(h).txt
 scripts\day\karin\kari_date-3.txt
 
+#SCRIPT GROUP Ichigo day
 #いちご
 scripts\day\ichigo\iti1.txt
 scripts\day\ichigo\iti2.txt
@@ -93,6 +100,7 @@ scripts\day\ichigoBAD2.txt
 scripts\day\ichigoH1.txt
 scripts\day\ichigoH2.txt
 
+#SCRIPT GROUP Mikan day
 #みかん
 scripts\day\mikan\mika1.txt
 scripts\day\mikan\mika2.txt
@@ -124,6 +132,7 @@ scripts\day\mikan\mika(date).txt
 scripts\day\mikan\mika(dateflg).txt
 scripts\day\mikan\mikanBAD.txt
 
+#SCRIPT GROUP Hikari day
 #ひかり
 scripts\day\hikari\hika01.txt
 scripts\day\hikari\hika02.txt
@@ -174,6 +183,7 @@ scripts\day\hikariE4.txt
 scripts\day\hikariE5.txt
 scripts\day\hikariE6.txt
 
+#SCRIPT GROUP Yuzu
 #ゆず
 scripts\day\yuzu1.txt
 scripts\day\yuzu2.txt
@@ -188,7 +198,7 @@ scripts\day\yuzu10.txt
 scripts\day\yuzu11.txt
 scripts\day\yuzu12.txt
 
-
+#SCRIPT GROUP Suika
 #すいか
 scripts\day\suika1.txt
 scripts\day\suika2.txt
@@ -204,12 +214,14 @@ scripts\day\suika11.txt
 scripts\day\suika_game_check.txt
 scripts\day\game_seal_(suika).txt
 
+#SCRIPT GROUP Miu
 #美雨
 scripts\day\miu1.txt
 scripts\day\miu2.txt
 scripts\day\miu3.txt
 #scripts\day\美雨4.txt
 
+#SCRIPT GROUP Seiji
 #誠司
 scripts\day\seiji1.txt
 scripts\day\seiji2.txt
@@ -220,6 +232,7 @@ scripts\day\seiji6.txt
 #scripts\day\誠司7.txt
 #scripts\day\誠司8.txt
 
+#SCRIPT GROUP day misc
 #共通イベント
 scripts\day\fathers_day.txt
 scripts\day\mothers_day.txt
@@ -250,7 +263,7 @@ scripts\day\0302_shizuku_kidnap.txt
 scripts\day\0303_shizuku_kidnap_day_after.txt
 scripts\day\0325_shizuku_return.txt
 
-
+#SCRIPT GROUP Zakuro
 #ざくろ
 scripts\day\zakuro1.txt
 scripts\day\zakuro2.txt
@@ -274,6 +287,7 @@ scripts\day\zakuro19.txt
 scripts\day\zakuro20.txt
 scripts\day\zakuro21.txt
 
+#SCRIPT GROUP TRPG
 #TRPG系
 scripts\trpg\youzyo-trpg1.txt
 scripts\trpg\youzyo-trpg2.txt
@@ -286,7 +300,7 @@ scripts\trpg\youzyo-TRPG(die).txt
 
 #scripts\day\すいか6.txt
 
-
+#SCRIPT GROUP Training misc
 scripts\training\item_ichigo_bandage.txt
 
 
@@ -327,6 +341,7 @@ scripts\training\training_karin_vibe.txt
 scripts\training\training_karin_anal_insert.txt
 scripts\training\training_karin_anal_vibe.txt
 
+#SCRIPT GROUP training Mikan
 scripts\training\training_in.txt
 scripts\training\training_mikan.txt
 scripts\training\training_mikan_01.txt
@@ -337,6 +352,7 @@ scripts\training\training_mikan_school_swimsuit.txt
 scripts\training\training_mikan_fellatio.txt
 scripts\training\training_mikan_anal_expansion.txt
 
+#SCRIPT GROUP training Ichigo
 scripts\training\training_ichigo.txt
 scripts\training\training_ichigo_01.txt
 scripts\training\training_ichigo_02.txt
@@ -346,6 +362,7 @@ scripts\training\training_ichigo_fellatio3.txt
 scripts\training\training_ichigo_fellatio4.txt
 scripts\training\training_ichigo_insert.txt
 
+#SCRIPT GROUP training Karin
 scripts\training\training_karin.txt
 scripts\training\training_karin_01.txt
 #scripts\training\training_karin_02.txt
@@ -361,12 +378,14 @@ scripts\training\training_karin_video1.txt
 scripts\training\training_karin_video2.txt
 scripts\training\training_karin_video3.txt
 
+#SCRIPT GROUP Schedule
 #スケジュール系
 scripts\schedule\setsumei.txt
 scripts\schedule\work_mikan.txt
 
 scripts\status\hensai.txt
 
+#SCRIPT GROUP endings
 #エンド
 scripts\ending\end_taiken.txt
 scripts\ending\end_taiken2.txt
@@ -384,4 +403,4 @@ scripts\ending\epilogue.txt
 #その他
 #scripts\title_stg.txt
 
-
+#SCRIPT GROUP END
