Added user_settings.txt and added disable_screen_flash to this file.

--- a/scripts/defines.ini
+++ b/scripts/defines.ini
@@ -33,3 +33,5 @@ scripts\define\simulationsystem_karin.inc
 scripts\define\simulationsystem_ichigo.inc
 scripts\define\trpgsystem.inc
 # ŠeŽí’è‹`‚±‚±‚Ü‚Å
+
+..\user_settings.txt
