--- a/musume/scripts/scripts.ini
+++ b/musume/scripts/scripts.ini
@@ -413,5 +413,7 @@ scripts\translator_intro.txt
 scripts\item\shop_buy_unnamed.txt
 scripts\item\shop_sel_unnamed.txt
 
+scripts\training\training_shared_handling.txt
+
 scripts\debug\debug_menu.txt
 scripts\debug\debug_characters.txt
